# Financial_Project

./: .gitignore  README.md  config.cfg  connection.py
bup/: pyproject.toml
conf/: config.cfg  configmanager.py
database/: create_schema.sql
dayche/conf/: config.cfg  configmanager.py  logmanager.py
dayche/data/: fetcher.py
dayche/database/: connection.py  create_schema.sql  crypto_historical.sql  crypto_quote.sql  crypto_real_time.sql  cryptocurrency.sql  index.sql  trigger_updated_at.sql
dayche/exceptions/: cryptoexceptions.py
docs/: LOGGING.md  LogManager-Guide.md  apply_schema.md  configmanager-properties.md  git_local_remote_conflict.md  indexing_strategies.md  roadmap1.json  roadmap2.json  sibling-packages-guide.md  venv_and_git.md
exceptions/: __init__.py  cryptoexceptions.py
