[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-pipeline-free"
version = "0.3.0"
description = "Daily EOD pipeline using free FMP stable endpoints"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "configobj>=5.0.8",
  "requests>=2.31",
  "pandas>=2.2",
  "numpy>=1.25",
  "matplotlib>=3.8",
  "pyodbc>=5.0",
]

[project.scripts]
fdp-main = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

py-modules = [
  "main",
  "config_manager",
  "data_fetcher",
  "database_manager",
  "errors",
  "indicator_calculator",
  "plotter",
  "realtime_updater"
]
